# TraderIsTraining

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_base_tables.py  0002_seed_supported_markets.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: enums.py  models.py  session.py  timestamps.py
backend/app/features/: users_models.py
backend/app/features/candles/: enums.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/features/challenges/: models.py
backend/app/features/equity_snapshots/: models.py  schemas.py
backend/app/features/markets/: models.py  repository.py  router.py  schemas.py
backend/app/features/review/: calculations.py  schemas.py  service.py
backend/app/features/trades/: enums.py  models.py  schemas.py
backend/app/features/training_sessions/: calculations.py  enums.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/integrations/upbit/: client.py  mapper.py  schemas.py
backend/app/tests/calculations/: test_trading_calculations.py  test_upbit_mapper.py
backend/app/tests/core/: test_config.py
backend/app/tests/db/: test_metadata_bootstrap.py
backend/app/tests/training_sessions/: test_create_session.py
frontend/: package.json
frontend/src/app/: App.tsx  main.tsx
frontend/src/app/providers/: QueryProvider.tsx
frontend/src/pages/review/: ReviewPage.tsx
frontend/src/pages/setup/: SetupPage.tsx
utils/: run_server.sh
(+21 files in other folders)
